--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,182 +1,294 @@
-/* entire page margins and wallpaper */
-body, html {
-    margin: 0;
-    height:100%;
-    background-image: url("https://images.designtrends.com/wp-content/uploads/2016/12/22183254/White-Concrete-Wall-Texture.jpg");
+* {
+    box-sizing: border-box;
 }
 
-/* sticky footer */
-.content {
-    min-height: 100%;
-    margin-bottom: -68px;
+body {
+    background: url('../images/concrete_seamless.png');
+    font-size: 18px;
+    line-height: 34px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
 }
 
-.push { 
-    height: 68px;
-}
-
-/* toolbar sizing*/
-    header {
-    margin: 0 auto;
-    background-color: #ffffff;
-    border-top: solid 2px #dddddd;
-    border-bottom: solid 3px #dddddd;
-    float: left;
+.container {
     width: 100%;
-    height: 80px;
-}
-
-/* margins for toolbar & page content */
-.wrapper {
-    margin: auto;
-    width: 960px;
-    margin-bottom: -80px;
-}
-
-/* name perameters */
-h1 {
-    background-color: #4aaaa5;
-    color: white;
-    text-align: center;
-    margin-top: 0px;
-    margin-right: 442px;
-    margin-bottom: 0px;
-    padding: 27px;
-    font-size: 26px;
-    font-family: "Georgia", Times, Times New Roman, serif;
-    float: left;
-}
-
-/* navigating the site buttons on toolbar */
-.nav {
-    float: left;
-    color: #777777;
-    background-color: #ffffff;
-    font-size: 14px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    margin: 30px 0px 0px 35px;
-}
-
-/* box around box 2 header */
-#box2header {
-    width: 650px;
-    height: 100%;
-    margin-top: 30px;
-    margin-right: 40px;
-    margin-bottom: 30px;
-    background-color: #ffffff;
-    float: left;
-}
-
-/* box 2 header perameters*/
-h2 {
-    margin: 0 0 0 10px;
-    background-color: #ffffff;
-    color: #4aaaa5;
-    text-align: left;
-    width: 590px;
-    height: 30px;
-    padding: 25px;
-    font-size: 24px;
-    font-family: "Georgia", Times, Times New Roman, serif;
-}
-
-/* box 2 content perameters */
-#box2main {
-    margin-left: 30px;
-    margin-bottom: 30px;
-    width: 590px;
-    height: 100%;
-    border-top: solid 2px #dddddd;
-    padding-top: 30px;
-    overflow: auto;
-}
-
-/* image placement */
-img {
-    float: left;
-    margin-right: 22px;
-    margin-bottom: 8px;
-}
-
-/* paragraph perameters */
-.bio {
-    color: #777777;
-    font-size: 14px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    margin-top: 0px;
-}
-
-/* box 3 entire box - perameters */
-#connectwithme {
-    float: left;
-    margin-top: 30px;
-    background-color: #ffffff;
-    width: 270px;
-    height: 220px;
-}
-
-/* box 3 header perameters */
-h3 {
-    float: left;
-    background-color: #ffffff;
-    color: hsl(177, 39%, 48%);
-    text-align: left;
-    margin-top: 0px;
-    width: 220px;
-    height: 30px;
-    padding: 25px;
-    font-size: 20px;
-    font-family: "Georgia", Times, Times New Roman, serif;
-}
-
-/* box 3 content perameters */
-#icon-box {
-    padding: 10px;
-    float: left;
-    width: 200px;
-    height: 115px;
-    border-top: 2px solid #dddddd;
-    background-color: #ffffff;
-    text-align: center;
-    margin-top: -20px;
-    margin-left: 25px;
-  
-}
-
-/* box 3 icon perameters */
-.icons {
-height: 50px;
-width: 50px;
-margin-top: 10px;
-margin-right: 20px;
-margin-left: -10px;
-border: 1px solid #ffffff;
-}
-
-/* stck icon adjustments */
-#stack {
-    height: 45px;
-    width: 45px;
-    margin-top: 13px;
-    margin-right: 20px;
-    margin-left: -8px;
-    border: 1px solid #ffffff;
-    }
-
-/* icons when cursor hovering */
-.icons:hover, #stack:hover {
-    border: 3px solid #ffffff
-}
-
-/* footer */
-footer {
-    background-color: #666666;
-    color: #e0dede;
-    padding: 26px;
-    text-align: center;
+    max-width: 960px;
+    margin: 0 auto;
     clear: both;
-    font-size: 9px;
+}
+
+h1, h2, h3, p {
+    margin-bottom: 20px;
+}
+
+p:last-child {
     margin-bottom: 0;
+}
+
+h1, h2, h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: 700;
+    color: #4aaaa5;
+}
+
+h1{
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #ddd;
+    padding-bottom: 20px;
+}
+
+h2, h3 {
+    font-size: 22px;
+}
+
+/* header */
+
+#masthead {
+    background: #fff;
+    margin: 0 0 30px;
+    z-index: 99;
+    color: #fff;
+    overflow: auto;
+    border-bottom: 2px solid #ccc;
+    position: fixed;
+    width: 100%;
+}
+
+#logo {
+    width: 350px;
+    height: 90px;
+    background: #4aaaa5;
+    float: left;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    text-align: center;
+    line-height: 90px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+nav {
+    float: right;
+    margin-top: 25px;
+}
+
+nav a {
+    color: #999;
+    text-decoration: none;
+    margin-left: 15px;
+    display: inline-block;
+    border-left: 1px solid #efefef;
+    padding-left: 15px;
+    line-height: 18px;
+}
+
+nav a:first-child {
+    border-lefr: 0 none;
+}
+
+#main-container {
+    padding-top: 130px;
+}
+
+.main-container {
+    background: #fff;
+    padding: 30px;
+    margin: 0 0 40px 0;
+    width: 100%;
+    max-width: 650px;
+    float: left;
+    border: 1px solid #ddd;
+}
+
+.auth-image {
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    float: left;
+    margin-right: 25px;
+}
+
+.sidebar {
+    background: #fff;
+    padding: 30px;
+    width: 100%;
+    max-width: 270px;
+    float: right;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+h3, .sidebar, h2 {
+    border-bottom: 2px solid #eee;
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+}
+
+.social {
+    width: 62px;
+    height: 62px;
+    margin-top: 4px;
+    margin-right: 5px;
+    float: left;
+}
+
+.social1 {
+    width: 56px;
+    height: 56px;
+    margin-top: 7px;
+    margin-left: 3px;
+    margin-right: 0;
+}
+
+footer {
+    background: #666;
+    color: #fff;
+    padding: 30px 0;
+    clear: both;
     border-top: 8px solid #4aaaa5;
+    color: #ccc;
+    font-size: 12px;
+    text-align: center;
+}
+
+/* portfolio */
+.work {
+    width: 274px;
+    overflow: auto;
+    position: relative;
+    float: left;
+    margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+    margin-right: 40px;
+}
+
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: .8;
+}
+
+.work h3 {
+    border-bottom: 0;
+    background: #4aaaa5;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    padding: 15px;
+    width: 100%;
+    line-height: 30px;
+    margin-bottom: 0;
+    font-weight: 300;
+}  
+
+/* contact */
+
+#contact-form ul {
+    margin-bottom: 20px;
+}
+
+#contact-form li {
+    margin-bottom: 10px;
+}
+
+label, input[type=text], input[type=email], textarea {
+    display: block;
+    width: 100%;
+}
+
+input[type=text], input[type=email], textarea {
+    height: 35px;
+    border: 1px solid #ddd;
+    padding: 0 10px;
+    font-size: 14px;
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type=submit] {
+    background: #4aaaa5;
+    border: 0 none;
+    color: #fff;
+    font-size: 18px;
+    padding: 10px 30px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 980px) {
+    .container {
+        padding: 0 20px;
+        max-width: 768px;
+    }
+    #main-container {
+        padding-top: 130px;
+    }
+    .main-section {
+        max-width: 420px;
+    }
+    .work {
+        width: 100%;
+    }
+    .auth-image {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main-container, .sidebar {
+        max-width: 100%;
+    } 
+    #main-container {
+        overflow: auto;
+    }
+    .sidebar {
+        margin-bottom: 40px;
+    }
+    .work {
+        width: 47%;
+        margin-bottom: 10px;
+    }
+    .work:nth-child(even) {
+        margin-right: 0;
+    }
+    .work:nth-child(odd) {
+        float: right;
+    }
+    .auth-image {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    #masthead {
+        position: static;
+        margin-bottom: 20px;
+    }
+    header.container {
+        padding: 0;
+    }
+    #main-container {
+        padding-top: 10px;
+    }
+    #logo, .work, .auth-image {
+        width : 100%;
+    }
+    nav {
+        text-align: center;
+        width: 100%;
+        margin: 15px 0;
+    }
+    nav a {
+        width: 30%;
+        padding-left: 0;
+        margin-left: 0;
+    }
 }
