--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ p:last-child {
 h1, h2, h3 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #0e0e3f;
 }
 
 h1{
@@ -58,7 +58,7 @@ h2, h3 {
 #logo {
     width: 350px;
     height: 90px;
-    background: #4aaaa5;
+    background: #0d0d59;
     float: left;
     font-family: 'Georgia', Times, Times New Roman, serif;
     text-align: center;
@@ -149,7 +149,7 @@ footer {
     color: #fff;
     padding: 30px 0;
     clear: both;
-    border-top: 8px solid #4aaaa5;
+    border-top: 8px solid #0d0d59;
     color: #ccc;
     font-size: 12px;
     text-align: center;
@@ -176,7 +176,7 @@ footer {
 
 .work h3 {
     border-bottom: 0;
-    background: #4aaaa5;
+    background: #0d0d59;
     color: #fff;
     text-align: center;
     position: absolute;
@@ -215,7 +215,7 @@ textarea {
 }
 
 input[type=submit] {
-    background: #4aaaa5;
+    background: #0d0d59;
     border: 0 none;
     color: #fff;
     font-size: 18px;
